--- a/bin/common.less
+++ b/bin/common.less
@@ -4,9 +4,9 @@
 @tooltip-layer: @default-layer;
 @splitter-layer: @default-layer;
 @domkit-layer: 400;
-@popup-layer: 500;
+@popup-layer: 800;
 @header-layer: 600;
-@hidemodal-layer: 800;
+@hidemodal-layer: 700;
 
 // This is also set in hide.comp.ContextMenu
 @contextmenu-layer: 900;
